// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/post_type/action_view/ActionView should match snapshot 1`] = `
<div>
  <div
    className="attachment-actions"
  >
    <Connect(ActionButton)
      action={
        Object {
          "id": "action_id1",
          "name": "answer1",
          "type": "button",
        }
      }
      hasVoted={true}
      key="action_id1"
      postId="post_id"
    />
    <Connect(ActionButton)
      action={
        Object {
          "id": "action_id2",
          "name": "answer2",
          "type": "button",
        }
      }
      hasVoted={true}
      key="action_id2"
      postId="post_id"
    />
    <Connect(ActionButton)
      action={
        Object {
          "id": "action_id3",
          "name": "answer3",
          "type": "button",
        }
      }
      hasVoted={false}
      key="action_id3"
      postId="post_id"
    />
  </div>
  <div
    className="attachment-actions"
  />
</div>
`;

exports[`components/post_type/action_view/ActionView should match snapshot with admin permission 1`] = `
<div>
  <div
    className="attachment-actions"
  >
    <Connect(ActionButton)
      action={
        Object {
          "id": "action_id1",
          "name": "answer1",
          "type": "button",
        }
      }
      hasVoted={true}
      key="action_id1"
      postId="post_id"
    />
    <Connect(ActionButton)
      action={
        Object {
          "id": "action_id2",
          "name": "answer2",
          "type": "button",
        }
      }
      hasVoted={true}
      key="action_id2"
      postId="post_id"
    />
    <Connect(ActionButton)
      action={
        Object {
          "id": "action_id3",
          "name": "answer3",
          "type": "button",
        }
      }
      hasVoted={false}
      key="action_id3"
      postId="post_id"
    />
    <Connect(ActionButton)
      action={
        Object {
          "id": "addOption",
          "name": "Add option",
          "type": "button",
        }
      }
      hasVoted={false}
      key="addOption"
      postId="post_id"
    />
  </div>
  <div
    className="attachment-actions"
  >
    <Connect(ActionButton)
      action={
        Object {
          "id": "deletePoll",
          "name": "Delete Poll",
          "type": "custom_matterpoll_admin_button",
        }
      }
      hasVoted={false}
      key="deletePoll"
      postId="post_id"
    />
    <Connect(ActionButton)
      action={
        Object {
          "id": "endPoll",
          "name": "End Poll",
          "type": "custom_matterpoll_admin_button",
        }
      }
      hasVoted={false}
      key="endPoll"
      postId="post_id"
    />
  </div>
</div>
`;

exports[`components/post_type/action_view/ActionView should match snapshot with only button actions 1`] = `
<div>
  <div
    className="attachment-actions"
  >
    <Connect(ActionButton)
      action={
        Object {
          "id": "action_id1",
          "name": "answer1",
          "type": "button",
        }
      }
      hasVoted={true}
      key="action_id1"
      postId="post_id"
    />
  </div>
  <div
    className="attachment-actions"
  />
</div>
`;

exports[`components/post_type/action_view/ActionView should match snapshot with only non-empty aciton id and name 1`] = `
<div>
  <div
    className="attachment-actions"
  >
    <Connect(ActionButton)
      action={
        Object {
          "id": "action_id1",
          "name": "answer1",
          "type": "button",
        }
      }
      hasVoted={true}
      key="action_id1"
      postId="post_id"
    />
    <Connect(ActionButton)
      action={
        Object {
          "id": "action_id4",
          "name": "answer4",
          "type": "button",
        }
      }
      hasVoted={false}
      key="action_id4"
      postId="post_id"
    />
  </div>
  <div
    className="attachment-actions"
  />
</div>
`;

exports[`components/post_type/action_view/ActionView should match snapshot without admin permission, with public-add-option 1`] = `
<div>
  <div
    className="attachment-actions"
  >
    <Connect(ActionButton)
      action={
        Object {
          "id": "action_id1",
          "name": "answer1",
          "type": "button",
        }
      }
      hasVoted={true}
      key="action_id1"
      postId="post_id"
    />
    <Connect(ActionButton)
      action={
        Object {
          "id": "action_id2",
          "name": "answer2",
          "type": "button",
        }
      }
      hasVoted={true}
      key="action_id2"
      postId="post_id"
    />
    <Connect(ActionButton)
      action={
        Object {
          "id": "action_id3",
          "name": "answer3",
          "type": "button",
        }
      }
      hasVoted={false}
      key="action_id3"
      postId="post_id"
    />
    <Connect(ActionButton)
      action={
        Object {
          "id": "addOption",
          "name": "Add option",
          "type": "button",
        }
      }
      hasVoted={false}
      key="addOption"
      postId="post_id"
    />
  </div>
  <div
    className="attachment-actions"
  />
</div>
`;

exports[`components/post_type/action_view/ActionView should match snapshot without any actions 1`] = `""`;

exports[`components/post_type/action_view/ActionView should match snapshot without permission for adding options 1`] = `
<div>
  <div
    className="attachment-actions"
  >
    <Connect(ActionButton)
      action={
        Object {
          "id": "action_id1",
          "name": "answer1",
          "type": "button",
        }
      }
      hasVoted={true}
      key="action_id1"
      postId="post_id"
    />
    <Connect(ActionButton)
      action={
        Object {
          "id": "action_id2",
          "name": "answer2",
          "type": "button",
        }
      }
      hasVoted={true}
      key="action_id2"
      postId="post_id"
    />
    <Connect(ActionButton)
      action={
        Object {
          "id": "action_id3",
          "name": "answer3",
          "type": "button",
        }
      }
      hasVoted={false}
      key="action_id3"
      postId="post_id"
    />
  </div>
  <div
    className="attachment-actions"
  />
</div>
`;
